--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,13 +15,13 @@ spring.datasource.password = ${database.password}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
 
 server.tomcat.threads.max = 1
 
-spring.flyway.baselineOnMigrate = true 
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 ###############################################
 ### LOGGING CONFIGURATIONS ###
 ###############################################
