--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,11 +26,11 @@ checkstyle:
     - mvn checkstyle:check
 
 variables:
-  DB_IP: ec2-54-155-92-75.eu-west-1.compute.amazonaws.com
+  DB_IP: ec2-54-74-60-70.eu-west-1.compute.amazonaws.com
   DB_PORT: 5432
-  DB_USER: vgwylexqedvnkq
-  DB_PASSWORD: 4af77f70e75ca37095152f985fb98c002e03c11ee26f989e98da7ab70deb11ab
-  DB_DBNAME: d40feluh83kpf4
+  DB_USER: dvuisidxtsghbd
+  DB_PASSWORD: d4718329d17128e9c32d1c082dedefb6617190c9a87b812a8728bd548f49d388
+  DB_DBNAME: d11ljba3hvvpk6
 
 deploy:
   stage: deploy
