--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,17 +15,17 @@ spring.datasource.password = ${database.password}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.show_sql=false
 server.tomcat.threads.max = 1
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 ###############################################
 ### LOGGING CONFIGURATIONS ###
 ###############################################
-logging.level.root=error
-logging.level.org.springframework=error
-logging.level.ro.tuc=error
+#logging.level.root=error
+#logging.level.org.springframework=error
+#logging.level.ro.tuc=error
 
 
 spring.rabbitmq.host=roedeer.rmq.cloudamqp.com
